--- a/adminv2/templates/adminv2/users/partials/users-table.html
+++ b/adminv2/templates/adminv2/users/partials/users-table.html
@@ -29,15 +29,15 @@
                     {% endif %}
                     width="24px" class="inline-block rounded-full object-cover h-6 w-6">
                 </td>
-                <td class="hover:underline cursor-pointer" onclick='view_user_info({{user.id}})'>                        
-                    <span>{{ user.first_name }} {{ user.last_name }}</span>
+                <td class="hover:underline cursor-pointer">                        
+                    <a href="{% url 'adminv2:user-info' user.id %}">{{ user.first_name }} {{ user.last_name }}</a>
                 </td>
                 <td class="">
                     <a class="text-blue-400" href="mailto:{{user.email}}">{{ user.email }}</a>
                 </td>
                 <td class=" capitalize">
                     {% if user.user_role == 'customer' %}
-                        User
+                        Customer
                     {% else %}
                         {{ user.user_role }}
                     {% endif %}
