--- a/adminv2/templates/adminv2/dashboard.html
+++ b/adminv2/templates/adminv2/dashboard.html
@@ -4,7 +4,7 @@
 {% block title %} {{block.super}} {% endblock %}
 
 {% block section_title %} Dashboard {% endblock %}
-{% block section_caption%} .... {% endblock %}
+{% block section_caption%}{% endblock %}
 
 {% block admin_content %} 
     <section class="grid grid-cols-1 lg:grid-cols-3 gap-2">
