--- a/adminv2/templates/adminv2/users/partials/user-listings.html
+++ b/adminv2/templates/adminv2/users/partials/user-listings.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+{% if listings %}
 <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
     {% for result in listings %}
         {% component "listing_card" 
@@ -15,3 +18,6 @@
         {% endcomponent %}
     {% endfor %}
 </div>
+{% else %}
+    {% component "no_results" caption="No listings found for this user." %} {% endcomponent %}
+{% endif %}
