--- a/adminv2/templates/adminv2/users/user-info.html
+++ b/adminv2/templates/adminv2/users/user-info.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block title %} Users | {{block.super}} {% endblock %}
+{% block section_title %} User Information {% endblock %}
+{% block section_caption%}{% endblock %}
 
 {% block admin_content %}
     <div class="max-w-6xl" x-data="userComponent">
@@ -37,9 +39,9 @@
                         </div>
                         
                         <div class="flex gap-2 items-center flex-wrap">
-                            <button class="hidden sm:block border border-gray-300 hover:bg-gray-50 text-gray-700 px-3 py-1.5 sm:px-4 sm:py-2 rounded-md text-sm font-medium transition-colors whitespace-nowrap cursor-pointer">
+                            <!-- <button class="hidden sm:block border border-gray-300 hover:bg-gray-50 text-gray-700 px-3 py-1.5 sm:px-4 sm:py-2 rounded-md text-sm font-medium transition-colors whitespace-nowrap cursor-pointer">
                                 Reset Password
-                            </button>
+                            </button> -->
                             <button class="border  px-3 py-1.5 sm:px-4 sm:py-2 rounded-md text-sm font-medium transition-colors whitespace-nowrap cursor-pointer flex items-center gap-2" 
                             :class="user.is_block ? 'success-btn' : 'danger-btn'"
                             @click="toggleBlock($event, user.id)"
@@ -56,24 +58,13 @@
                                 <span x-text="user.is_block ? 'Unblock User':'Block User'"></span>
                             </button>
                             
-
-                            <div class="relative">
-                                <button class="w-8 h-8 sm:w-9 sm:h-9 flex items-center justify-center rounded-full hover:bg-gray-100 transition-colors cursor-pointer" 
-                                        popovertarget="more-actions-menu" 
-                                        style="anchor-name:--more-actions-anchor">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 -960 960 960" fill="currentColor">
+                            <div class="daisy-dropdown daisy-dropdown-bottom daisy-dropdown-center">
+                            <div tabindex="0" role="button" class="w-8 h-8 sm:w-9 sm:h-9 flex items-center justify-center rounded-full hover:bg-gray-100 transition-colors cursor-pointer" >
+                                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 -960 960 960" fill="currentColor">
                                         <path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/>
                                     </svg>
-                                </button>
-
-                                <ul class="absolute right-0 w-48 bg-white rounded-md shadow-lg py-1 z-50 border border-gray-200 *:block *:px-4 *:py-2 *:text-sm *:text-gray-700 *:hover:bg-blue-50 *:whitespace-nowrap *:cursor-pointer *:*:block"
-                                    popover 
-                                    id="more-actions-menu" 
-                                    style="position-anchor:--more-actions-anchor; 
-                                        inset: anchor(bottom);
-                                        margin-top: 0.5rem;">
-                                
-                                    
+                                </div>
+                                <ul tabindex="0" class="daisy-dropdown-content daisy-menu mt-1 w-52 p-2 bg-white rounded-md shadow-lg py-1 z-50 border border-gray-200 *:block *:px-4 *:py-1.5 *:text-sm *:text-gray-700 *:hover:bg-blue-50 *:whitespace-nowrap *:cursor-pointer *:*:block">
                                     <li x-show="user.user_role == 'admin'" class=""><a @click="changeRole(user.id, 'customer')">Change to Customer</a></li>
                                     <li x-show="user.user_role == 'customer'" class=""><a @click="changeRole(user.id, 'admin')" class="">Change to Admin</a></li>
                                     <li x-show="user.user_role == 'customer'" class=""><a @click="changeRole(user.id, 'agent')" class="">Change to Agent</a></li>
@@ -99,8 +90,8 @@
                 </div>
             </div>
 
-            <div class="relative bg-white p-4 sm:p-6 rounded-b-lg shadow-sm border border-gray-100 border-t-0 min-h-56">
-                <div x-show="loading" class="absolute inset-0 flex justify-center items-center" role="status">
+            <div class="bg-white p-4 sm:p-6 rounded-b-lg shadow-sm border border-gray-100 border-t-0 min-h-56 flex flex-col">
+                <div x-show="loading" class="flex justify-center items-center grow" role="status">
                     <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
                         <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
@@ -108,7 +99,7 @@
                     <span class="sr-only">Loading...</span>
                 </div>
 
-                <div x-show="!loading" x-ref="content"></div>
+                <div x-show="!loading" class="flex flex-col grow *:grow" x-ref="content"></div>
             </div>
         </div>
     </div>
@@ -204,7 +195,7 @@
                 
                 templates : {
                     '{% url 'adminv2:basic-user-info-partial' %}': 'Basic Info',
-                    '{% url 'adminv2:user-blog-articles-partial' user.id %}': 'Blog',
+                    '{% url 'adminv2:user-blog-articles-partial' user.id %}': 'Blogs',
                     '{% url 'adminv2:user-listings-partial' user.id %}': 'Listings',
                     '{% url 'adminv2:user-fav-listings-partial' user.id %}': 'Favourite Listings',
                 },
@@ -227,7 +218,6 @@
                     .then(response => response.text())
                     .then(html => {
                         this.$refs.content.innerHTML = html;
-                        console.log(html)
                         injectHTMLWithScripts(this.$refs.content, html); //the func is in the utils
                         Alpine.initTree(this.$refs.content); // Re-initialize bindings in loaded content
                     })
