correct user last login on profile dashboard

--- a/adminv2/templates/adminv2/users/partials/basic-info.html
+++ b/adminv2/templates/adminv2/users/partials/basic-info.html
@@ -25,7 +25,7 @@
             </div>
             <div class="break-words">
                 <p class="text-sm text-gray-500">Last Login</p>
-                <p class="text-gray-900 sm:text-base" x-text="timesince(user.date_joined)">{{ user.last_login|timesince }} ago</p>
+                <p class="text-gray-900 sm:text-base" x-text="timesince(user.last_login)">{{ user.last_login|timesince }} ago</p>
             </div>
             <div class="break-words">
                 <p class="text-sm text-gray-500">Status</p>
