--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -6,7 +6,7 @@
     {% block header %} {% endblock %}
 
     {% block content %}
-    <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-100 lg:p-4">
+    <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-100 lg:px-4">
         
         <!-- Nav bar -->
         <nav x-cloak :class="isOpen ? 'absolute' : 'hidden'" class="w-2/3 md:max-w-56 lg:w-full lg:flex h-screen bg-white flex flex-col gap-5 p-4 lg:sticky top-0 lg:col-span-1 z-[90]">
@@ -74,7 +74,7 @@
         </nav>
 
         <!-- Main content -->
-        <div class="flex flex-col gap-4 lg:col-span-3 pt-2 px-4 min-h-[100vh]">
+        <div class="flex flex-col gap-4 lg:col-span-3 pt-4 px-4 min-h-[100vh]">
             <header class="flex justify-between sticky">
                 <div>
                     {% if breadcrumbs %}
